[Accessibiliy] Fix contrast color carousel indicators

--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -6139,6 +6139,7 @@ textarea.form-control-lg {
   width: 30px;
   height: 5px;
   padding: 0;
+  margin-top: 7px;
   margin-right: 3px;
   margin-left: 3px;
   text-indent: -999px;
@@ -6149,7 +6150,7 @@ textarea.form-control-lg {
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
   opacity: 1;
-  transition: opacity 0.6s ease;
+  transition: background-color 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
   .carousel-indicators [data-bs-target] {
